--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="logo">
                 <img src="wildfly_logo.png" alts="WildFly" border="0" />
         </div>
-        <h1>Welcome to Master</h1>
+        <h1>Welcome to Vishnu</h1>
 
         <h3>Your WildFly instance is running.</h3>
 
