--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
 
-    <title>Welcome Soumya Again</title>
+    <title>Welcome chalil bro</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="StyleSheet" href="wildfly.css" type="text/css">
 </head>
